fix responsive on small device

--- a/assets/CSS/index.css
+++ b/assets/CSS/index.css
@@ -52,13 +52,7 @@ nav li {
     align-items: center;
     align-content: flex-start;
     justify-content: space-between;
-}
-
-@media (min-width: 732.1px) {
-    .navbar-container {
-        background-color: rgb(70, 67, 67, 0.5);
-        box-shadow: 4px 4px 20px rgb(28, 27, 27);
-    }
+    background-color: rgba(82, 80, 80, 0.523);
 }
 
 .nav-link {
@@ -187,6 +181,7 @@ main {
         background-size: cover;
         color: black;
         animation: responsive .5s ease-in forwards;
+        margin: 0;
     }
 
     a {
@@ -195,6 +190,7 @@ main {
 
     main {
         justify-content: flex-end;
+        padding: 1rem;
     }
 
     main > div {
@@ -229,6 +225,7 @@ main {
         justify-content: space-between;
         background-color: none;
         box-shadow: none;
+        padding: 1rem;
     }
 
     .nav-link {
@@ -292,5 +289,114 @@ main {
 
     .hide-menu-button {
         opacity:0;
+    }
+
+    footer {
+        position: relative;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        display: flex;
+    }
+}
+
+/******* orientation landscape *********/
+@media ( max-width: 768px ), ((max-height: 370px) and (orientation: landscape))  {
+
+    header {
+        color: black;
+    }
+
+    .container {
+        padding-top: .5rem;
+    }
+
+    main {
+        margin-bottom: 2rem;
+    }
+
+    .navbar-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        align-content: flex-start;
+        justify-content: space-between;
+        background-color: transparent;
+        box-shadow: none;
+        padding-top: 1rem;
+    }
+
+    .nav-list,
+    .container-list {
+        display: none;
+    }
+
+    .container-responsive {
+        display: flex;
+    }
+
+    .navbar-container > .container-list {
+        display: none;
+    }
+
+    .toggle-menu:hover {
+        cursor: pointer;
+    }
+
+    .menu-responsive-list {
+        display: none;
+        animation: openMenuSmallDevice .5s ease-in;
+    }
+
+    .menu-active {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        position: fixed;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        width: 50vw;
+        background-color: rgba(255, 255, 255, 0.769);
+        z-index: 10;
+    }
+
+    .position-close-button {
+        margin-top: .5rem;
+        padding-top: 1rem;
+        padding-right: .5rem;
+    }
+
+    .close-button {
+        display: block;
+        animation: displayCloseButton .9 ease-in 1.2s forwards;
+    }
+
+    .close-button:hover {
+        cursor: pointer;
+    }
+
+    .nav-list-responsive {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-list-responsive > li {
+        padding: 5%;
+        border-bottom: 1px solid lightgray;
+    }
+
+    .hide-menu-button {
+        opacity: 0;
+    }
+
+    footer {
+        position: relative;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        display: flex;
     }
 }
