--- a/assets/CSS/mentions_legales.css
+++ b/assets/CSS/mentions_legales.css
@@ -237,6 +237,106 @@ footer {
     }
 }
 
+/****** Orientation landscape ************/
+
+@media ( max-width: 768px ), ( (max-height: 370px) and (orientation: landscape))  {
+    header {
+        color: black;
+    }
+
+    .container {
+        padding-top: .5rem;
+    }
+
+    main {
+        margin-bottom: 2rem;
+    }
+
+    .navbar-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        align-content: flex-start;
+        justify-content: space-between;
+        background-color: none;
+        box-shadow: none;
+        padding-top: 1rem;
+    }
+
+    .nav-list,
+    .container-list {
+        display: none;
+    }
+
+    .container-responsive {
+        display: flex;
+    }
+
+    .navbar-container > .container-list {
+        display: none;
+    }
+
+    .toggle-menu:hover {
+        cursor: pointer;
+    }
+
+    .menu-responsive-list {
+        display: none;
+        animation: openMenuSmallDevice .5s ease-in;
+    }
+
+    .menu-active {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        position: fixed;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        width: 50vw;
+        background-color: rgba(255, 255, 255, 0.769);
+        z-index: 10;
+    }
+
+    .position-close-button {
+        margin-top: .5rem;
+        padding-top: 1rem;
+        padding-right: .5rem;
+    }
+
+    .close-button {
+        display: block;
+        animation: displayCloseButton .9 ease-in 1.2s forwards;
+    }
+
+    .close-button:hover {
+        cursor: pointer;
+    }
+
+    .nav-list-responsive {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-list-responsive > li {
+        padding: 5%;
+        border-bottom: 1px solid lightgray;
+    }
+
+    .hide-menu-button {
+        opacity: 0;
+    }
+
+    footer {
+        position: relative;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        display: flex;
+    }
+}
+
 /************ Animation ****************/
 
 @keyframes openMenuSmallDevice {
